apps/services/homepage/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  annotations:
    tailscale.com/hostname: "dashboard"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
  type: LoadBalancer
